--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test-render-site": "npm run build && node build/render.js examples/onepage/page2.xml",
+    "clean": "rm -rf build",
+    "test-render-site": "npm run prep && npm run build && node build/render.js examples/onepage/page2.xml",
     "build": "esbuild src/*.ts --outdir=build",
     "build-css": "cp resources/style.css build",
-    "prep": "rm -rf build && mkdir build && ln -sf resources/style.css build/style.css",
+    "prep": "rm -rf build && mkdir build && cp resources/* build/",
     "tsc": "tsc",
     "test": "vitest run --dir src",
     "release-patch": "npm run build && npm version patch && npm publish"
