--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "clean": "rm -rf build",
-    "test-render-site": "npm run prep && npm run build && node build/render.js examples/onepage/page2.xml",
+    "test-render-site": "npm run prep && npm run build && node build/render.js examples/onepage/pureimage-readme.xml",
     "build": "esbuild src/*.ts --outdir=build",
     "build-css": "cp resources/style.css build",
     "prep": "rm -rf build && mkdir build && cp resources/* build/",
