add a features example

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "clean": "rm -rf build",
     "test-render-site": "npm run prep && npm run build && node build/render.js examples/onepage/pureimage-readme.xml",
+    "test-render-features": "npm run prep && npm run build && node build/render.js examples/features/features.xml",
     "test-include": "npm run prep && npm run build && node build/render.js examples/include/test.xml",
     "test-youtube-embed": "npm run prep && npm run build && node build/render.js examples/embed/youtube.xml",
     "test-shiki": "npm run prep && npm run build && node build/shiki-test.js",
