add build to included files

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.2",
   "main": "index.js",
   "type": "module",
+  "files": ["build/*.js"],
   "scripts": {
     "clean": "rm -rf build",
     "test-render-site": "npm run prep && npm run build && node build/render.js examples/onepage/pureimage-readme.xml",
