--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "mdxml-tools",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "main": "index.js",
   "type": "module",
-  "files": ["build/*.js"],
+  "files": [
+    "build/*.js"
+  ],
   "scripts": {
     "clean": "rm -rf build",
     "test-render-site": "npm run prep && npm run build && node build/render.js examples/onepage/pureimage-readme.xml",
