--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "type": "module",
   "files": [
-    "build/*.js",
-    "build/*.d.ts"
+    "build/*"
   ],
   "types": "build/lib.d.ts",
   "scripts": {
@@ -16,7 +15,8 @@
     "test-youtube-embed": "npm run prep && npm run build && node build/render.js examples/embed/youtube.xml",
     "render": "npm run prep && npm run build && node build/render.js",
     "test-shiki": "npm run prep && npm run build && node build/shiki-test.js",
-    "build": "esbuild src/*.ts --outdir=build",
+    "build": "esbuild src/lib.ts --outdir=build",
+    "build-lib": "npm run clean && npm run build && npm run tsc",
     "build-css": "cp resources/style.css build",
     "serve": "npx http-server build",
     "prep": "rm -rf build && mkdir build && cp resources/* build/",
