--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   ],
   "scripts": {
     "clean": "rm -rf build",
-    "render": "npm run build && node build/cli.js --serve=true --outdir=temp --infile=examples/features/features.xml --resources=resources",
+    "render": "npm run build && node build/cli.js --serve --outdir=temp --resources=resources --infile=examples/features/features.xml --browser",
+    "automated": "npm run build && node build/cli.js --serve --outdir=temp --resources=resources",
     "build": "npm run clean && node build.js",
     "tsc": "tsc",
     "test": "vitest run --dir src",
