support rendering a docset in addition to single pages

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "clean": "rm -rf build",
     "render": "npm run build && node build/cli.js --serve --outdir=temp --resources=resources --infile=examples/features/features.xml --browser",
+    "render-docset": "npm run build && node build/cli.js --outdir=temp --resources=resources --infile=examples/docset/docset.xml --docset --serve --browser",
     "automated": "npm run build && node build/cli.js --serve --outdir=temp --resources=resources",
     "build": "npm run clean && node build.js",
     "tsc": "tsc",
