copy styles and resources for docset

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build/*"
   ],
   "scripts": {
-    "clean": "rm -rf build",
+    "clean": "rm -rf build && rm -rf temp",
     "render": "npm run build && node build/cli.js --serve --outdir=temp --resources=resources --infile=examples/features/features.xml --browser",
     "render-docset": "npm run build && node build/cli.js --outdir=temp --resources=resources --infile=examples/docset/docset.xml --docset --serve --browser",
     "automated": "npm run build && node build/cli.js --serve --outdir=temp --resources=resources",
