--- a/.github/workflows/brain.yaml
+++ b/.github/workflows/brain.yaml
@@ -23,7 +23,7 @@ jobs:
         uses: appleboy/scp-action@v0.1.7
         with:
           host: joshy.org
-          username: deployman
+          username: deploymanfoo
           password: ${SECRETS.DEPLOYMAN_PASSWORD}
           port: 22
           source: "temp/git.html"
