--- a/.github/workflows/brain.yaml
+++ b/.github/workflows/brain.yaml
@@ -22,7 +22,7 @@ jobs:
           username: deployman
           port: 22
           key: ${{secrets.DEPLOYMAN_PRIVATE_KEY}}
-          source: "temp/*.html"
+          source: "temp/*.*"
           target: /home/joshy/sites/apps.josh.earth/brain
           strip_components: 1
 
